# PoolMax

./: Cargo.toml  index.html
app-core/: Cargo.toml
app-core/src/: lib.rs  message_queue.rs  structs.rs
desktop-sim/: Cargo.toml
desktop-sim/src/: main.rs  server.rs
esp32-fw/: Cargo.toml
esp32-fw/src/: lib.rs  main.rs
src/: main.rs
