[package]
name = "desktop-sim"
version = "0.1.0"
edition = "2021"
default-run = "desktop-sim"

[dependencies]
app-core = { path = "../app-core" }
termion = "2.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tiny_http = "0.12"