[package]
name = "esp32-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
app-core = { path = "../app-core", default-features = false }
esp32-hal = "0.18"
esp-println = "0.10"     # only one version

esp-backtrace = "0.13"   # compatible published version

[package.metadata.espflash]
partition_table = "partition-table.csv"

[lib]
test = false
doctest = false
bench = false